--- a/css/estilo.css
+++ b/css/estilo.css
@@ -84,3 +84,12 @@ body {
   	width: 100%;
   	text-align: center;
 }
+
+.coluna4 {
+	width: 250px;
+	margin: 10px;
+	text-align: center;
+	position: relative;
+	top: 50%; 
+  	width: 100%;	
+}
