--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,7 +8,7 @@ body {
 
 .coluna1 {
 	margin:10px 10px;
-	float: left;
+	float: left; /* Elemento posicionado */
 	font-family: sans-serif; 
 	color: #E7C142;
 }
