--- a/css/estilo.css
+++ b/css/estilo.css
@@ -73,6 +73,7 @@ body {
 	top: 50%; 
   	width: 100%;
   	text-align: center; /* alinhando o texto no centro */
+	background-color: aliceblue;
 }
 .coluna3 {
 	width: 250px;
